--- a/src/SilverRock.AzureTools/SilverRock.AzureTools.csproj
+++ b/src/SilverRock.AzureTools/SilverRock.AzureTools.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BrokeredMessageEventArgs.cs" />
     <Compile Include="Mappers\SubscriberMapper.cs" />
     <Compile Include="Mappers\TopicMapper.cs" />
     <Compile Include="Models\Script.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="Models\Subscription.cs" />
     <Compile Include="ScriptRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SubscriptionPoller.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
