--- a/src/SilverRock.AzureTools/SilverRock.AzureTools.csproj
+++ b/src/SilverRock.AzureTools/SilverRock.AzureTools.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BrokeredMessageEventArgs.cs" />
+    <Compile Include="INamespaceService.cs" />
     <Compile Include="Mappers\SubscriberMapper.cs" />
     <Compile Include="Mappers\TopicMapper.cs" />
     <Compile Include="Models\Script.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="Models\Subscription.cs" />
     <Compile Include="ScriptRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AzureNamespaceService.cs" />
     <Compile Include="SubscriptionPoller.cs" />
   </ItemGroup>
   <ItemGroup>
