--- a/src/SilverRock.AzureTools/SilverRock.AzureTools.csproj
+++ b/src/SilverRock.AzureTools/SilverRock.AzureTools.csproj
@@ -58,9 +58,15 @@
     <Compile Include="INamespaceService.cs" />
     <Compile Include="Mappers\SubscriberMapper.cs" />
     <Compile Include="Mappers\TopicMapper.cs" />
+    <Compile Include="Models\AppService\Account.cs" />
+    <Compile Include="Models\AppService\AppService.cs" />
+    <Compile Include="Models\AppService\AppServices.cs" />
+    <Compile Include="Models\DeployEnvironment.cs" />
     <Compile Include="Models\Script.cs" />
-    <Compile Include="Models\Topic.cs" />
-    <Compile Include="Models\Subscription.cs" />
+    <Compile Include="Models\ServicesBus\Namespace.cs" />
+    <Compile Include="Models\ServicesBus\Topics.cs" />
+    <Compile Include="Models\ServicesBus\Topic.cs" />
+    <Compile Include="Models\ServicesBus\Subscription.cs" />
     <Compile Include="ScriptRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AzureNamespaceService.cs" />
