--- a/src/SilverRock.AzureTools/SilverRock.AzureTools.csproj
+++ b/src/SilverRock.AzureTools/SilverRock.AzureTools.csproj
@@ -56,6 +56,7 @@
     <Compile Include="BrokeredMessageEventArgs.cs" />
     <Compile Include="IAppServiceClient.cs" />
     <Compile Include="INamespaceService.cs" />
+    <Compile Include="IServiceLocator.cs" />
     <Compile Include="Mappers\SubscriberMapper.cs" />
     <Compile Include="Mappers\TopicMapper.cs" />
     <Compile Include="Models\AppService\Account.cs" />
