--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ after_test:
 - cmd: .\coverage.cmd
 before_package:
 - ps: >-
-    $version = If ( $env:APPVEYOR_BUILD_VERSION == "master" ) {"$env:APPVEYOR_BUILD_VERSION"} Else {"$env:APPVEYOR_BUILD_VERSION-alpha"}
+    $version = IF ($env:APPVEYOR_REPO_BRANCH -eq "master") {"$env:APPVEYOR_BUILD_VERSION"} ELSE {"$env:APPVEYOR_BUILD_VERSION-alpha"}
     (Get-Content "$env:APPVEYOR_BUILD_FOLDER\src\SilverRock.AzureTools\SilverRock.AzureTools.nuspec") `
-        -replace '<version>[^<]*?</version>', ('<version>{0}</version>' -f $env:APPVEYOR_BUILD_VERSION) |
+        -replace '<version>[^<]*?</version>', ('<version>{0}</version>' -f $version) |
       Out-File "$env:APPVEYOR_BUILD_FOLDER\src\SilverRock.AzureTools\SilverRock.AzureTools.nuspec"
